--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,10 @@
 <div class="container">
-  <h1>Welcome to Sinatra!</h1>
+  <h1>landing page</h1>
   <p>Hello, world!</p>
+  <p>this will eventually display avaliable resources</p>
 
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
+<a href='/mission/new'>plan new mission</a>
+<br>
+<a href=''>dispatch mode( #unimplemented)</a>
+
 </div>
