--- a/app/views/partials/_add_passenger.erb
+++ b/app/views/partials/_add_passenger.erb
@@ -1,3 +1,3 @@
     <tr>
-      <td><input type="text" name="" placeholder="assigned soldier"></td>
+      <td><input type="text" name="passenger[name]" placeholder="assigned soldier"></td>
     </tr>
