end of day; needs to be retooled from table formated to CSS

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,19 @@
 <div class="container">
-  <h1>landing page</h1>
-  <p>Hello, world!</p>
-  <p>this will eventually display avaliable resources</p>
+  <h1>Open Missions</h1>
 
-<a href='/mission/new'>plan new mission</a>
-<br>
-<a href=''>dispatch mode( #unimplemented)</a>
+  <!-- this ruby logic feels like it should live elsewhere -->
+  <% if @current_missions.length == 0 %>
+    <h5>No missions currently queued</h5>
+  <%else%>
+<!--   I want this to sort missions first by date, then by time (display chronological), and then only display things that have not occured yet.  I am thinking the .sort or .sort_by ruby methods, but I am not clear on how these work with multiple sorts and it might be better to do this on the DB end.
+ -->
+    <% @current_missions.each do |mission| %>
+      <p><%= "#{mission.step_off_time} - #{mission.step_off_date}:  #{mission.name} - #{mission.unit_serviced}" %></p>
+    <%end%>
+  <%end%>
+
+  <a href='/mission/new'>plan new mission</a>
+  <br>
+  <a href=''>dispatch mode( #unimplemented)</a>
 
 </div>
