--- a/app/views/partials/_new_assignment.erb
+++ b/app/views/partials/_new_assignment.erb
@@ -13,6 +13,16 @@
           <input type="submit" value="Add Passenger">
         </form>
       </td>
+      <td>
+        <form id='add_trailer'>
+          <input type="submit" value="Add Passenger">
+        </form>
+      </td>
+      <td>
+        <form id='add_load'>
+          <input type="submit" value="Add Passenger">
+        </form>
+      </td>
     </tr>
   </table>
 
