--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,7 +16,7 @@
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
-  <script src="/js/bootstrap.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js"></script>
 
 
