failed ajax refactor, added trailer_dispatch to migration

--- a/app/views/partials/_add_load.erb
+++ b/app/views/partials/_add_load.erb
@@ -1,7 +1,8 @@
-<tr>
-  <td><input class='dropdown'></td>
+<tr class='load_input'>
+  <td><input type="text" name="vehicle[][vehicle_name]" placeholder="loaded vehicle"></td>
 
   <td><textarea name="loads[][load]">Load List</textarea></td>
+</tr>
 
 
 
