--- a/app/views/partials/_add_trailer.erb
+++ b/app/views/partials/_add_trailer.erb
@@ -1,3 +1,4 @@
-    <tr>
-      <td><input type="text" name="trailers[][name]" placeholder="assigned soldier"></td>
-    </tr>
+<tr class='trailer_input'>
+  <td><input type="text" name="trailers[][trailer_name]" placeholder="trailer"></td>
+  <td><input type="text" name="trailers[][truck_name]" placeholder="truck attached to"></td>
+</tr>
