--- a/app/views/partials/_new_assignment.erb
+++ b/app/views/partials/_new_assignment.erb
@@ -15,12 +15,12 @@
       </td>
       <td>
         <form id='add_trailer'>
-          <input type="submit" value="Add Passenger">
+          <input type="submit" value="Add Trailer">
         </form>
       </td>
       <td>
         <form id='add_load'>
-          <input type="submit" value="Add Passenger">
+          <input type="submit" value="Add Load">
         </form>
       </td>
     </tr>
