--- a/app/views/partials/_add_passenger.erb
+++ b/app/views/partials/_add_passenger.erb
@@ -1,3 +1,3 @@
-    <tr>
-      <td><input type="text" name="passengers[][name]" placeholder="assigned soldier"></td>
-    </tr>
+<tr class='passenger_input'>
+  <td><input type="text" name="passengers[][name]" placeholder="assigned soldier"></td>
+</tr>
