partial bootstrap implementation, old linear stacking bug reappeared

--- a/app/views/partials/_add_truck.erb
+++ b/app/views/partials/_add_truck.erb
@@ -1,8 +1,16 @@
-<tr class='truck_input'>
-  <td><input type="text" name="truck[][truck_name]" placeholder="truck"></td>
-  <td><input type="text" name="truck[][driver_name]" placeholder="driver's name"></td>
-  <td><input type="text" name="truck[][a_driver_name]" placeholder="A-driver's name"></td>
-</tr>
+<div class='truck_input' class='row'>
+  <div class='col-xs-2.5'>
+    <input type="text" name="truck[][truck_name]" placeholder="truck">
+  </div>
+  <div class='col-xs-2.5'>
+    <input type="text" name="truck[][driver_name]" placeholder="driver's name">
+  </div>
+  <div class='col-xs-2.5'>
+    <input type="text" name="truck[][a_driver_name]" placeholder="A-driver's name">
+  </div>
+  <div class='col-xs-4.5'>
+  </div>
+</div>
 
 
 
