--- a/app/views/planning/new_mission.erb
+++ b/app/views/planning/new_mission.erb
@@ -1,7 +1,8 @@
-<%= erb :'/partials/_resource_list', {layout: false, locals: { trucks: @trucks, personnel: @personnel}} %>
+
+
+<%= erb :'/partials/_resource_list', {layout: false, locals: { trucks: @trucks, personnel: @personnel, trailers: @trailers}} %>
 
 <%= erb :'/partials/_new_assignment' %>
 
 <%= erb :'/partials/_route_planning' %>
-
 
