--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
+
+
   <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
   <link rel="stylesheet" href="/css/application.css">
+  <!--make sure using min or reg as appropriate for bootstrap-->
   <link rel="stylesheet" href="/css/bootstrap.min.css">
 
+  <!-- JQuery and ajax, both are needed for bootstrap to work -->
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+  <!-- custom JS file -->
   <script src="/js/application.js"></script>
+
+  <!--make sure using min or reg as appropriate for bootstrap-->
   <script src="/js/bootstrap.min.js"></script>
+
+  <!-- needed to allow auto-scaling as sizing shifts -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- for the google map API -->
   <script src="https://maps.googleapis.com/maps/api/js"></script>
 
 
