--- a/app/views/partials/_route_planning.erb
+++ b/app/views/partials/_route_planning.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <h3>Route Planning</h3>
 
-
+<!--   <input type='submit' name= -->
 
   <div id="map-canvas"></div>
 
@@ -16,12 +16,22 @@
     // turns out this isn't supported by basic sinatra, although it is built in functionality in rails
     function initialize() {
       var mapCanvas = document.getElementById('map-canvas');
+      var grid = new google.maps.LatLng(41.5403, -88.0463);
       var mapOptions = {
-        center: new google.maps.LatLng(41.5403, -88.0463),
+        center: grid,
         zoom: 8,
         mapTypeId: google.maps.MapTypeId.ROADMAP
-      }
-      var map = new google.maps.Map(mapCanvas, mapOptions)
+      };
+      var map = new google.maps.Map(mapCanvas, mapOptions);
+
     }
     google.maps.event.addDomListener(window, 'load', initialize);
   </script>
+
+<script>
+      var marker = new google.maps.Marker({
+        position: grid,
+        map: map,
+        title: "stuff"
+      });
+</script>
