ajax reload bug fixed *shakes head*

--- a/app/views/partials/_new_assignment.erb
+++ b/app/views/partials/_new_assignment.erb
@@ -1,4 +1,4 @@
-<div class='container' id='assignment_table'>
+<div class='container'>
   <div class='row'>
     <div class='col-xs-12'>
       <h3>Make Assignments</h3>
@@ -77,9 +77,8 @@
           <input type="time" name="mission[return_time]">
         </div>
       </div>
-
-
+      <div id='assignment_table'>
         <%= erb :'/partials/_add_truck'%>
-    <!-- </div> -->
+      </div>
   </form>
 </div>
