working new mission form

--- a/app/views/partials/_add_passenger.erb
+++ b/app/views/partials/_add_passenger.erb
@@ -1,3 +1,5 @@
-<tr class='passenger_input'>
-  <td><input type="text" name="passengers[][name]" placeholder="assigned soldier"></td>
-</tr>
+<div class="panel-body">
+	<div class="form-group">
+		<input type="text" name="passengers[][name]" placeholder="assigned soldier">
+	</div>
+</div>
