--- a/app/views/partials/_add_trailer.erb
+++ b/app/views/partials/_add_trailer.erb
@@ -1,4 +1,6 @@
-<tr class='trailer_input'>
-  <td><input type="text" name="trailers[][trailer_name]" placeholder="trailer"></td>
-  <td><input type="text" name="trailers[][truck_name]" placeholder="truck attached to"></td>
-</tr>
+<div class="panel-body">
+	<div class="form-group">
+		<input type="text" name="trailers[][trailer_name]" placeholder="trailer">
+		<input type="text" name="trailers[][truck_name]" placeholder="truck attached to">
+	</div>
+</div>
