--- a/app/views/partials/_add_truck.erb
+++ b/app/views/partials/_add_truck.erb
@@ -1,17 +1,11 @@
-<div class='truck_input' class='row'>
-  <div class='col-xs-3'>
+<div class="panel-body">
+  <div class="form-group">
     <input type="text" name="truck[][truck_name]" placeholder="truck">
-  </div>
-  <div class='col-xs-2'>
     <input type="text" name="truck[][driver_name]" placeholder="driver's name">
-  </div>
-  <div class='col-xs-2'>
     <input type="text" name="truck[][a_driver_name]" placeholder="A-driver's name">
   </div>
-  <div class='col-xs-5'>
-    <p></p>
-  </div>
 </div>
+
 
 
 
