--- a/app/views/partials/_new_assignment.erb
+++ b/app/views/partials/_new_assignment.erb
@@ -1,84 +1,76 @@
-<div class='container'>
-  <div class='row'>
-    <div class='col-xs-12'>
-      <h3>Make Assignments</h3>
-    </div>
-  </div>
-  <div class='row'>
-    <div class='col-xs-4'>
-      <input type="submit" value="Submit">
-    </div>
-    <div class='col-xs-2'>
-      <form id='add_truck'>
-        <input type="submit" value="Add Truck">
-      </form>
-    </div>
-    <div class='col-xs-2'>
-      <form id='add_passenger'>
-        <input type="submit" value="Add Passenger">
-      </form>
-    </div>
-    <div class='col-xs-2'>
-      <form id='add_trailer'>
-        <input type="submit" value="Add Trailer">
-      </form>
-    </div>
-    <div class='col-xs-2'>
-      <form id='add_payload'>
-        <input type="submit" value="Add Payload">
-      </form>
-    </div>
-  </div> <!-- closes button row -->
+<form id='create_mission' action="/mission" method="post">
+  <fieldset>
 
-  <form id='create_mission' action="/mission" method="post">
+    <div class='row'>
+      <div class='col-xs-12'>
+        <h3>Assign Mission</h3>
+      </div>
+    </div>
 
-    <!-- <div id='assignment_table' class='container'> -->
-      <div class='row'>
-        <div class='col-xs-4'>
-          <h5>Mission Type</h5>
-        </div>
-        <div class='col-xs-4'>
-          <h5>Unit Serviced</h5>
+    <div class='row'>
+      <div class='col-xs-12'>
+        <div class="btn-group inline">
+
+          <button type="button" class="btn btn-default" id='add_truck'>
+            Add Truck
+          </button>
+          <button type="button" class="btn btn-default" id='add_passenger'>
+            Add Passenger
+          </button>
+          <button type="button" class="btn btn-default" id='add_trailer'>
+            Add Trailer
+          </button>
+          <button type="button" class="btn btn-default" id='add_payload'>
+            Add Payload
+          </button>
+
+        </div> 
+      </div>
+    </div>
+    <br>
+    <div class='row'>
+      <div class='col-xs-12'>
+        <div class="form">
+
+          <div class="form-group">
+            <label for="missionName">Mission Type</label>
+            <input type="text" id="missionName" name="mission[name]" placeholder="Chow / Ammo / TrX / RR">
+          </div>
+          <div class="form-group">
+            <label for='unitServiced'>Unit Serviced</label>
+            <input type="text" name="mission[unit_serviced]" placeholder="Alpha / Bravo / Golf" id='unitServiced'>
+          </div>
+
+          <div class="form-group">
+            <label for="startDate">Step Off</label>
+            <input type="date" name="mission[step_off_date]" id="startDate">
+            <input type="time" name="mission[step_off_time]" id="startTime">
+          </div>
+
+          <div class="form-group">
+            <label for="returnDate">Return</label>
+            <input type="date" name="mission[return_date]" id="returnDate">
+            <input type="time" name="mission[return_time]" id="returnTime">
+          </div>
+        
         </div>
       </div>
-      <div class='row'>
-        <div class='col-xs-4'>
-          <input type="text" name="mission[name]" placeholder="mission" >
-        </div>
-        <div class='col-xs-4'>
-          <input type="text" name="mission[unit_serviced]" placeholder="for">
-        </div>
-      </div>
-      <div class='row'>
-        <div class='col-xs-3'>
-          <h5>Start Date</h5>
-        </div>
-        <div class='col-xs-3'>
-          <h5>Start Time</h5>
-        </div>
-        <div class='col-xs-3'>
-          <h5>Return Date</h5>
-        </div>
-        <div class='col-xs-3'>
-          <h5>Return Time</h5>
-        </div>
-      </div>
-      <div class='row'>
-        <div class='col-xs-3'>
-          <input type="date" name="mission[step_off_date]">
-        </div>
-        <div class='col-xs-3'>
-          <input type="time" name="mission[step_off_time]">
-        </div>
-        <div class='col-xs-3'>
-          <input type="date" name="mission[return_date]">
-        </div>
-        <div class='col-xs-3'>
-          <input type="time" name="mission[return_time]">
-        </div>
-      </div>
-      <div id='assignment_table'>
+    </div>
+   
+
+    <div class='row'>
+      <div class='panel panel-default' id='assignment_table'>
         <%= erb :'/partials/_add_truck'%>
       </div>
-  </form>
-</div>
+    </div>
+
+    <div class='row'>
+      <div class='col-xs-12'>
+        <input type="submit" class='btn btn-default' value="Submit">
+        <hr>
+      </div>
+    </div>
+
+  </fieldset>
+</form>
+
