--- a/app/views/partials/_resource_list.erb
+++ b/app/views/partials/_resource_list.erb
@@ -1,52 +1,50 @@
-<div class='container' class='resource_list'>
-  <div class="row">
-    <div class="col-xs-12">
-      <h3>Currently Avaliable Resources</h3>
-    </div>
+<div class="row">
+  <div class="col-xs-12">
+    <h3>Currently Avaliable Resources</h3>
   </div>
+</div>
 
-  <div class='truck_display' class="row">
-    <div class="col-xs-2">
-      <h5>Trucks</h5>
-    </div>
-    <div class="col-xs-10">
+<div class='display' class="row">
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">Trucks</div>
       <% if trucks.length == 0 %>
         <h5>No trucks currently avaliable</h5>
       <%else%>
         <% trucks.each do |truck| %>
-          <p><%= "#{truck.name} - #{truck.model}" %></p>
+          <div class="panel-body">
+            <%= "#{truck.name} - #{truck.model}" %>
+          </div>
         <%end%>
       <%end%>
     </div>
   </div>
-
-  <div class='personnel_display' class="row">
-    <div class="col-xs-2">
-      <h5>Personnel</h5>
-    </div>
-    <div class="col-xs-10">
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">Personnel</div>
       <% if personnel.length == 0 %>
         <h5>No soldiers currently avaliable</h5>
       <%else%>
         <% personnel.each do |soldier| %>
-          <p><%= "#{soldier.name} - #{soldier.rank}" %></p>
+          <div class="panel-body">
+            <%= "#{soldier.name} - #{soldier.rank}" %>
+          </div>
         <%end%>
       <%end%>
     </div>
   </div>
-
-  <div class='trailer_display' class="row">
-    <div class="col-xs-2">
-      <h5>Trailers</h5>
-    </div>
-    <div class="col-xs-10">
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">Trailers</div>
       <% if trailers.length == 0 %>
         <h5>No trailers currently avaliable</h5>
       <%else%>
         <% trailers.each do |trailer| %>
-          <p><%= "#{trailer.name}" %></p>
+          <div class="panel-body">
+            <%= "#{trailer.name}" %>
+          </div>
         <%end%>
       <%end%>
     </div>
   </div>
-</div>
+</div> 
