--- a/app/views/partials/_route_planning.erb
+++ b/app/views/partials/_route_planning.erb
@@ -1,11 +1,9 @@
-<div class='container'>
-  <h3>Route Planning</h3>
 
-<!--   <input type='submit' name= -->
+<h3>Route Planning</h3>
 
-  <div id="map-canvas"></div>
+<div id="map-canvas"></div>
 
-</div>
+
 
 
 
@@ -23,15 +21,16 @@
         mapTypeId: google.maps.MapTypeId.ROADMAP
       };
       var map = new google.maps.Map(mapCanvas, mapOptions);
+      
 
     }
     google.maps.event.addDomListener(window, 'load', initialize);
   </script>
 
-<script>
-      var marker = new google.maps.Marker({
-        position: grid,
-        map: map,
-        title: "stuff"
-      });
-</script>
+// <script>
+//       var marker = new google.maps.Marker({
+//         position: grid,
+//         map: map,
+//         title: "stuff"
+//       });
+// </script>
