--- a/app/views/partials/_new_assignment.erb
+++ b/app/views/partials/_new_assignment.erb
@@ -14,7 +14,7 @@
           <button type="button" class="btn btn-default" id='add_passenger'>Add Passenger</button>
           <button type="button" class="btn btn-default" id='add_trailer'>Add Trailer</button>
           <button type="button" class="btn btn-default" id='add_payload'>Add Payload</button>
-        </div> 
+        </div>
       </div>
     </div>
     <br>
@@ -32,29 +32,21 @@
           </div>
 
           <div class="form-group">
-            <% me = Time.now %>
-            <%  def ti(me)
-                  if me / 10 == 0
-                    "0#{me}"
-                  else
-                    "#{me}"
-                  end
-                end %>
             <label for="startDate">Step Off </label>
-            <input type="date" name="mission[step_off_date]" id="startDate" value=<%="#{me.year}-#{ti(me.month)}-#{ti(me.day)}" %>>
-            <input type="time" name="mission[step_off_time]" id="startTime" value=<%="#{ti(me.hour)}:#{ti(me.min)}"%>>
+            <input type="date" name="mission[step_off_date]" id="startDate" value=<%= mission_date %>>
+            <input type="time" name="mission[step_off_time]" id="startTime" value=<%= mission_time %>>
           </div>
 
           <div class="form-group">
             <label for="returnDate">Return</label>
-            <input type="date" name="mission[return_date]" id="returnDate" value=<%="#{me.year}-#{ti(me.month)}-#{ti(me.day)}" %>>
-            <input type="time" name="mission[return_time]" id="returnTime" value=<%="#{ti(me.hour)}:#{ti(me.min)}"%>>
+            <input type="date" name="mission[return_date]" id="returnDate" value=<%= mission_date %>>
+            <input type="time" name="mission[return_time]" id="returnTime" value=<%= mission_time %>>
           </div>
-        
+
         </div>
       </div>
     </div>
-   
+
 
     <div class='row'>
       <div class='panel panel-default' id='assignment_table'>
