--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,37 @@
 <div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
+  
+  <div class='jumbotron'>
+		<div class='panel panel-default'>
 
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
+			<div class='panel-heading'>
+				The Mission
+			</div>
+			
+		  <% if @missions.length == 0 %>
+		  	<div class='panel-body'>
+		  		<h5>Awaiting Orders</h5>
+	  		</div>
+	  	<%else%>
+	  		<% @missions.each do |mission| %>
+	  			<div class='panel-body'>
+	  			<% if mission.completed %>
+	  				<p><del>
+	  					<%= "#{mission.dateTime} :: #{mission.name} #{mission.unit_serviced}" %>
+	  				</del></p>
+	  			<% elsif mission.initiated %>
+	  				<p class='text-success'>
+	  					<%= "#{mission.dateTime} :: #{mission.name} #{mission.unit_serviced}" %>
+	  				</p>
+	  			<%else%>
+	  				<p>
+	  					<%= "#{mission.dateTime} :: #{mission.name} #{mission.unit_serviced}" %>
+	  				</p>
+	  			<%end%>
+	  			</div>
+	  		<%end%>
+  		<%end%>
+  	</div>
+  </div>
+
 </div>
+
