broke internet dependancy

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
 
   <!-- JQuery and ajax, both are needed for bootstrap to work -->
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="/js/jquery.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
   <!-- custom JS file -->
@@ -52,7 +52,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/mission/new">Assign Mission</a></li>
-        <li class="active"><a href="/mission">Dispatch</a></li> 
+        <li class="active"><a href="/mission">Dispatch</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
