--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
 
   <!-- JQuery and ajax, both are needed for bootstrap to work -->
+  <!-- file added to application to break internet dependancy -->
   <script src="/js/jquery.js"></script>
 
   <!-- custom JS file -->
