--- a/app/views/partials/_new_assignment.erb
+++ b/app/views/partials/_new_assignment.erb
@@ -1,4 +1,4 @@
-<form id='create_mission' action="/mission" method="post">
+<form id='create_mission' action="/missions" method="post">
   <fieldset>
 
     <div class='row'>
