--- a/app/views/dispatch/mission_display.erb
+++ b/app/views/dispatch/mission_display.erb
@@ -10,70 +10,72 @@
 <div class="container">
 
   <div class='jumbotron'>
-    <h1><%="#{@mission.name} - #{@mission.unit_serviced}"%></h1>
-    <h3>Now:<%=mission_time%> Planned for <%="#{@mission.step_off} - #{@mission.return}"%></h3>
+    <h1><%="#{@mission_display[:mission].name} - #{@mission_display[:mission].unit_serviced}"%></h1>
+    <h2>TimeNow: <%=mission_time%>
+      <% if is_init = @mission_display[:mission].initiated %>
+        <%=stoplight(is_init)%> Started </span>
+      <%else%>
+        <%=stoplight(is_init)%> Unstarted </span>
+      <%end%>
+      <% if is_complete = @mission_display[:mission].completed %>
+        <%=stoplight(is_complete)%> Finished </span>
+      <%else%>
+        <%=stoplight(is_complete)%> Unfinished </span>
+      <%end%>
+    </h2>
+    <h3>Planned for <%="#{@mission_display[:mission].show_out_dateTime} - #{@mission_display[:mission].show_return_dateTime}"%></h3>
   </div>
 
   <div class='row'>
-    <div class='col-xs-6'>
+
+    <div class='col-sm-6'>
       <div class='panel panel-default'>
-        <div class='panel-heading'>
-          Trucks
-        </div>
-          <% @dispatches.each do |truck| %>
-left off editing here...  last issue was the fact that the dispatch object doesn't have the info... was advised to look up "service objects"
 
-
-
-            <div class='panel-body'>
-              <p class="text-success">
-                <%= "#{mission.dateTime} :: #{mission.name} #{mission.unit_serviced}" %>
-                <a href=<%="/mission/#{mission.id}"%>>
-                  <button type="button" class="btn btn-default">
-                    View
-                  </button>
-                </a>
-              </p>
-            </div>
-          <%end%>
-        <%end%>
-      </div>
-    </div>
-  </div>
-
-  <div class='row'>
-    <div class='col-xs-12'>
-      <div class='panel panel-default'>
-        <div class='panel-heading'>
-          Upcoming Missions
-        </div>
-        <% unless @unresolved_missions[:uninitiated] %>
+        <% @mission_display[:trucks].each do |truck| %>
           <div class='panel-body'>
-            <h5>Nothing Planned</h5>
-          </div>
-        <% else %>
-          <% @unresolved_missions[:uninitiated].each do |mission| %>
-            <form action=<%="/mission/#{mission.id}"%> method='post'>
-            <input type="hidden" name="_method" value="put"/>
-            <% if mission.step_off < Time.now %>
-              <div class='panel-body'>
-                <p class="text-danger">
-                  <%= "#{mission.dateTime} :: #{mission.name} #{mission.unit_serviced}" %>
-            <%else%>
-              <div class='panel-body' class='success'>
-                <p class='text-info'>
-                <%= "#{mission.dateTime} :: #{mission.name} #{mission.unit_serviced}" %>
-            <%end%>
-                <button type="submit" class="btn btn-default">
-                  Leaving
-                </button></p>
-              </div>
+            <form action=<%="/missions/safe_return/dispatch/#{truck[:dispatch_id]}"%> method='post'>
+            <input type='hidden' name='_method' value='put'>
+              <%= stoplight( truck[:returned] ) %>
+                <%= "#{truck[:truck].name} - #{truck[:driver].name} #{truck[:driver].rank}, #{truck[:a_driver].name} #{truck[:a_driver].rank}" %>
+                <%= check_in_btn( truck[:returned] ) %>
+              </span>
             </form>
-          <%end%>
+          </div>
         <%end%>
+
+        <% @mission_display[:trailers].each do |trailer| %>
+          <div class='panel-body'>
+            <form action=<%="/missions/safe_return/trailer_dispatch/#{trailer[:dispatch_id]}"%> method='post'>
+            <input type='hidden' name='_method' value='put'>
+              <%= stoplight( trailer[:returned] ) %>
+                <%= "#{trailer[:trailer].name}" %>
+                <%= check_in_btn( trailer[:returned] ) %>
+              </span>
+            </form>
+          </div>
+        <%end%>
+
       </div>
     </div>
-  </div>
+    <div class='col-sm-6'>
+      <div class='panel panel-default'>
 
-</div>
+        <% @mission_display[:soldiers].each do |soldier| %>
+          <div class='panel-body'>
+            <form action=<%="/missions/safe_return/passenger/#{soldier[:passenger_id]}"%> method='post'>
+            <input type='hidden' name='_method' value='put'>
+              <%= stoplight( soldier[:returned] ) %>
+                <%= "#{soldier[:soldier].name} #{soldier[:soldier].rank}" %>
+                <%= check_in_btn( soldier[:returned] ) %>
+              </span>
+            </form>
+          </div>
+        <%end%>
+
+      </div>
+    </div>
+
+  </div> <!--close row-->
+
+</div><!--close container-->
 
