--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -51,8 +51,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/mission/new">Assign Mission</a></li>
-        <li class="active"><a href="/mission">Dispatch</a></li>
+        <li class="active"><a href="/missions/new">Assign Mission</a></li>
+        <li class="active"><a href="/missions">Dispatch</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
